--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -729,7 +729,7 @@ function startRequest() {
     //
     $('#myset').click(function(){
         location.href = '/myset'
-        window.localStorage.setItem('user_id',{$umsg.id});
+        window.localStorage.setItem('user.id',{$umsg.id});
     })
 </script>
 </body>
